Sorta fixed the periodic table, made it so the atomic weight would stop showing if the screen was too smalll
The problem is that when the atomic weight stops showing, the height of the element decreases? There has been this weird empty space on the flexbox that has been bugging me and i think it has something to do with the how the height of the flexbox is calculated first and then the size of the text (for atomic number) is shrunk after, so the leftover space is just left there, which makes the box become rectangular.

Maybe if I put the aspect ratio thing after the children of the button have their heights calculated, the new aspect ratio will be calculated and that empty space will go away?

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,7 @@ table.periodic_table {
     min-height: 80%; 
     display: flex; 
     flex-direction: column;
+    overflow-x: scroll;
 }
 
 tr.periodic_table {
@@ -23,9 +24,10 @@ tr.periodic_table {
 }
 
 th.periodic_table {
-    width: 60px; 
+    min-width: 32px; 
     flex-grow: 1;  
     display: flex;
+    font-size: clamp(6px, 1vw, 16px)
 }
 
 td.periodic_table {
@@ -37,6 +39,8 @@ td.periodic_table, button.periodic_table, div.element_container {
     aspect-ratio: 1/1; 
     display: flex;
     flex-direction: column;
+    min-width: 32px; /* (min_width*18 +24 )/100 = min font size */
+    font-size: clamp(6px, 1vw, 16px)
 }
 
 button.periodic_table.element_container, div.element_container {
@@ -54,7 +58,7 @@ div.element_container {
 p.periodic_table {
     text-align: center; 
     margin-bottom: 0px;
-    font-size: xx-small
+    font-size: 0.8em
 }
 
 p.element_atomic_number {
@@ -64,5 +68,16 @@ p.element_atomic_number {
 }
 
 p.element_symbol {
-    font-size: medium;
+    font-size: 1.45em;
+}
+
+p.element_atomic_weight {
+    height: 0%;
+}
+
+@media screen and (max-width: 960px) {
+    p.element_atomic_weight {
+        height: 0%;
+        display: none;
+    }
 }
